Fixed horizontal scroll

--- a/css/general.css
+++ b/css/general.css
@@ -40,13 +40,12 @@ header {
   border-radius: 4px;
   font-size: 12px;
   transition: all 500ms;
-  transform: translateX(200%);
+
   opacity: 0;
 }
 
 .show-alert {
   opacity: 1;
-  transform: translateX(0);
 }
 
 main {
